@@ -1,14 +1,6 @@
 [main]
 auth = DB
 logging  = 0
-# Be aware of tempdir setting. If client_browser and server_apache on same 
-# machine, sharing tmp-dir , problems 'Permission denied' if server tries to 
-# write temp-file which already exists as client-owned
-#
-# Note tempdir is used as the basename of the dir, the real dirname is equivalent to....
-#    /tmp/ledgersmb-$EUID/
-#  If you specify a different dir to /tmp/ledgersmb ensure it's parent is writable by the running user.
-tempdir = /tmp/ledgersmb
 
 # This is the logical CSS directory.  I.e. it is what comes before the 
 # ledgersmb.css in the url.  Example might be /my_css_dir/ or 
