@@ -10,11 +10,10 @@ chdir 't/data';
 require LedgerSMB::Sysconfig;
 
 
-plan tests => (11+scalar(@LedgerSMB::Sysconfig::scripts)
+plan tests => (10+scalar(@LedgerSMB::Sysconfig::scripts)
                +scalar(@LedgerSMB::Sysconfig::newscripts));
 
 is $LedgerSMB::Sysconfig::auth, 'DB2', 'Auth set correctly';
-is $LedgerSMB::Sysconfig::tempdir, "test-$EUID", 'tempdir set correctly';
 is $LedgerSMB::Sysconfig::cssdir, 'css3/', 'css dir set correctly';
 is $LedgerSMB::Sysconfig::fs_cssdir, 'css4', 'css fs dir set correctly';
 is $LedgerSMB::Sysconfig::cache_templates, 5, 'template caching working';
