@@ -1,10 +1,6 @@
 [main]
 auth = DB2
 logging  = 1
-# Be aware of tempdir setting. If client_browser and server_apache on same 
-# machine, sharing tmp-dir , problems 'Permission denied' if server tries to 
-# write temp-file which already exists as client-owned
-tempdir = test
 
 # This is the logical CSS directory.  I.e. it is what comes before the 
 # ledgersmb.css in the url.  Example might be /my_css_dir/ or 
